syntax="proto3";

option  go_package = "amusing-x.com/ganymede/ganymedeservice";

package ganymde;

message LogoutRequest {
    string sessionID = 1;
}

message LogoutResponse {
    bool logout = 1;
}